--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ dependencies = [
     "flask>=2.0.0",
     "flask-wtf>=1.0.0",
     "bootstrap-flask>=2.2.0",
+    "json5>=0.12.0",
+    "pymilvus>=0.2.14",
+    "pymilvus[model]>=0.2.12",
 ]
 
 # These fields appear in pip show
@@ -85,3 +88,8 @@ target-version = ["py38"]
 [tool.isort]
 profile = "black"
 line_length = 100
+
+[tool.pytest.ini_options]
+markers = [
+    "unit: marks tests as unit tests"
+]
