--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,7 @@ dependencies = [
     "flask-wtf>=1.0.0",
     "bootstrap-flask>=2.2.0",
     "json5>=0.12.0",
-    "pymilvus>=0.2.14",
-    "pymilvus[model]>=0.2.12",
+    "chromadb>=1.0.15",
 ]
 
 # These fields appear in pip show
